--- a/src/Chat/Footer/styles.module.css
+++ b/src/Chat/Footer/styles.module.css
@@ -14,9 +14,6 @@
   align-items: center;
   cursor: pointer;
   justify-content: center;
-}
-
-a {
   text-decoration: none;
   color: inherit;
 }
